---------------------------------------------------------------------------------------------------
Version: 0.8.4
Date: 2025-12-06
  Balancing:
    - Vault support requesters can now only spawn up to 6 pylons during their lifetime
    - Reduced protection pylon's resistance to fire damage
    - Flamethrower turrets now accept energetic residue and harenic lava 
---------------------------------------------------------------------------------------------------
Version: 0.8.3
Date: 2025-12-04
  Bugfixes:
    - Fixed description of machines with E.A.R.S.
    - Fixed Warpin from pylons not working
---------------------------------------------------------------------------------------------------
Version: 0.8.2
Date: 2025-11-30
  Bugfixes:
    - Fixed hacks lasting way too long due to resistance changes
---------------------------------------------------------------------------------------------------
Version: 0.8.1
Date: 2025-11-29
  Balancing:
    - Increased yield and spawn rate of Rabbascan rocks
  Bugfixes:
    - Fixed potential crash when deconstructing a warp pylon
---------------------------------------------------------------------------------------------------
Version: 0.8.0
Date: 2025-11-29
  Changes:
    - This update adds challenging content to the late game and reorganizes some rabbascan technologies
    - Purified Harene is now the powerful but hard to create resource it was meant to be
    - Haronite plate and purified harene recipes changed, making them much harder to acquire
    - Haronite plate is now also a tile placeable on space platforms, providing energy to E.A.R.S. cores
    - Added upgrades to Protein shake, Turbofuel and Beta carotene made from purified harene, requiring promethium science to unlock
    - Added new late-game technology to extract warp pylons from vaults
    - Total available power on Rabbasca can now be changed via setting
    - Vault protection pylons will now create alerts when spawned