@@ -1,0 +1,5 @@
+{
+    "recipe":[
+        ["rabbasca-extend-hack-vault-access-key", "rabbasca-extend-hack-vault-security-key"]
+    ]
+}
