@@ -3,8 +3,13 @@ Version: 0.8.4
 Date: 2025-12-06
   Balancing:
     - Vault support requesters can now only spawn up to 6 pylons during their lifetime
-    - Reduced protection pylon's resistance to fire damage
-    - Flamethrower turrets now accept energetic residue and harenic lava 
+    - Reduced protection pylon's resistance to fire damage (100% -> 25%)
+    - Flamethrower turrets now accept energetic residue and harenic lava
+    - Vault console now has a fixed recipe, no longer accepting vault access key
+    - Increased health of hack attempts (80 -> 100 / 620 -> 800)
+    - Increased capture speed bonus of Vault security key (+25% -> +40%)
+  Bugfixes:
+    - Fixed vault console could be hacked indefinitely by using logistics network
 ---------------------------------------------------------------------------------------------------
 Version: 0.8.3
 Date: 2025-12-04
